--- a/index.html/index.html
+++ b/index.html/index.html
@@ -16,7 +16,7 @@
         // console.log(result)
 
 
-        // let text = 'my name is usman khan'
+        // let text = 'my name is SHAKEEB AHMED'
 
         // for(let i = 0 ; i < text.length ; i++){
         //     console.log(text.slice(i,i+5) === 'usman');
