--- a/index.html/index.html
+++ b/index.html/index.html
@@ -16,10 +16,10 @@
         // console.log(result)
 
 
-        // let text = 'my name is SHAKEEB AHMED'
+        // let text = 'my name is shakeeb ahmed'
 
         // for(let i = 0 ; i < text.length ; i++){
-        //     console.log(text.slice(i,i+5) === 'usman');
+        //     console.log(text.slice(i,i+5) === 'shakeeb');
 
         // }
 
